--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "google-auth-library": "^9.11.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
-    "next-themes": "^0.3.0",
+    "next-pwa": "^5.6.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
