--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^10.12.2",
     "genkit": "^1.14.1",
     "google-auth-library": "^9.11.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-pwa": "^5.6.0",
     "next-sanity": "^9.4.2",
-    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
