--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = ".next"
 
 [build.environment]
-  SECRETS_SCAN_OMIT_KEYS = "GEMINI_API_KEY,NEXT_PUBLIC_FIREBASE_API_KEY"
+  SECRETS_SCAN_OMIT_KEYS = "GEMINI_API_KEY"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
