--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "resend": "^3.4.0",
     "sanity": "^3.50.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
